--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,10 @@ jobs:
         run: npm ci
       - name: Check dependencies size
         run: du -sh node_modules
+      - name: Ensure config directory exists
+        run: mkdir -p ./test/config
+      - name: Export config TEST_DB
+        run: echo '${{ secrets.TEST_DB }}' > ./test/config/DB.yml
       - name: Unit test using Jest
         run: npm test
   test-windows:
@@ -61,5 +65,9 @@ jobs:
         run: npm ci
       - name: Check dependencies size
         run: du -sh node_modules
+      - name: Ensure config directory exists
+        run: mkdir -p ./test/config
+      - name: Export config TEST_DB
+        run: echo '${{ secrets.TEST_DB }}' > ./test/config/DB.yml
       - name: Unit test using Jest
         run: npm test
