--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -19,5 +19,9 @@ jobs:
         run: npm ci
       - name: Check dependencies size
         run: du -sh node_modules
+      - name: Ensure config directory exists
+        run: mkdir -p ./test/config
+      - name: Export config TEST_DB
+        run: echo '${{ secrets.TEST_DB }}' > ./test/config/DB.yml
       - name: Unit test with coverage using Jest
         run: npm run coverage
