--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,10 @@ jobs:
         run: npm run lint
       - name: Run NPM audit
         run: npm audit
+      - name: Ensure config directory exists
+        run: mkdir -p ./test/config
+      - name: Export config TEST_DB
+        run: echo '${{ secrets.TEST_DB }}' > ./test/config/DB.yml
       - name: Unit test with coverage using Jest
         run: npm test
       - name: Publish to NPM
