--- a/.github/workflows/ut.yml
+++ b/.github/workflows/ut.yml
@@ -20,5 +20,9 @@ jobs:
         run: npm i
       - name: Check dependencies size
         run: du -sh node_modules
+      - name: Ensure config directory exists
+        run: mkdir -p ./test/config
+      - name: Export config TEST_DB
+        run: echo '${{ secrets.TEST_DB }}' > ./test/config/DB.yml
       - name: Unit test using Jest
         run: npm run test
