--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "keywords": [
     "database"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "@sumor/config": "^1.2.3"
+  },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "eslint": "^8.57.0",
