--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "database"
   ],
   "dependencies": {
-    "@sumor/config": "^1.2.3"
+    "@sumor/config": "^1.2.3",
+    "fs-extra": "^11.2.0",
+    "knex": "^3.1.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
@@ -24,7 +26,9 @@
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-html-reporter": "^3.10.2",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "mysql2": "^3.9.8",
+    "better-sqlite3": "^9.6.0"
   },
   "files": [
     "src",
