--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@sumor/config": "^1.2.3",
     "fs-extra": "^11.2.0",
     "knex": "^3.1.0",
-    "@sumor/logger": "^1.2.2",
+    "@sumor/logger": "^1.2.3",
     "@sumor/error": "^1.0.4"
   },
   "devDependencies": {
@@ -51,6 +51,6 @@
     "publish-release-minor": "npm version minor && npm run push-tag",
     "publish-release-major": "npm version major && npm run push-tag",
     "prepare": "husky",
-    "check": "eslint --fix . && prettier --write . && npm audit fix --force && npm run coverage"
+    "check": "npm run autofix && npm run coverage"
   }
 }
