--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "jest": "^29.7.0",
     "jest-html-reporter": "^3.10.2",
     "prettier": "^3.2.5",
-    "mysql2": "^3.9.8",
-    "better-sqlite3": "^9.6.0"
+    "mysql2": "^3.9.8"
   },
   "files": [
     "src",
